--- a/class.tex
+++ b/class.tex
@@ -104,7 +104,7 @@ Ontario N2J 2W9, Canada}
 %\end{center}
 
 \begin{abstract}
-	We give a complete classification of mass dimension five Lorentz-noninvariant interactions
+	We give a complete classification of mass dimension five Lorentz-non-invariant interactions
     composed from the Standard Model fields, using the effective field theory approach. 
     We identify different classes of Lorentz violating operators, 
     some of which are protected against transmutation 
@@ -260,7 +260,7 @@ giving an expectation value to certain non-SM fields
 that carry Lorentz indices, such as vectors, 
 tensors, and gradients of scalar fields. The interaction of these fields with  operators composed 
 from the SM fields, fully Lorentz-symmetric before the spontaneous breaking, below the 
-scale of the condesation will manifest itself as effective LV terms. Schematically, one 
+scale of the condensation will manifest itself as effective LV terms. Schematically, one 
 has 
 \begin{equation}
 O^{\rm SM}_{\mu\nu...} C^{\mu\nu...} \to O^{\rm SM}_{\mu\nu...} \langle C^{\mu\nu...} \rangle,
@@ -285,19 +285,22 @@ where typical values for {\em e.g.} $b_\mu$ of light quarks are known to be smal
 $10^{-31}$ GeV. It can be hypothesized that spurions at dimension three and four levels are in fact 
 not fundamental, but indeed effective, implying a different type of scaling, {\em e.g.} 
 $a^\mu,b^\mu \sim \Lambda_{\rm IR}^2/\Lambda_{\rm UV}$, where $\Lambda_{IR}$ is the energy scale 
-associated with the SM. The appearence of $\Lambda_{UV}$ in the denominator implies that above the 
+associated with the SM. The appearance of $\Lambda_{UV}$ in the denominator implies that above the 
 scale $\Lambda_{\rm IR}$ one should be able to formulate all LV interactions in terms of the  
 {\em higher-dimensional} LV operators.  
 
 The purpose of this paper is to give a complete account of LV operators of dimension five 
-in QED and in the SM. Previously, only certain sublcasses of higher-dimensional operators 
+in QED and in the SM. Previously, only certain subclasses of higher-dimensional operators 
 have been considered. Notably, dimension six LV operators and 
 their phenomenological consequences 
-have been studied at length in the context of the canonical non-commutative field theories (refs). 
+have been studied at length in the context of the canonical non-commutative field theories 
+\cite{MPR1,UCSC,Carlson:1998vx}. 
 The operators that introduce the UV modifications of the dispersion relations for particles 
-have been a subject of intense investigations over a number of years (refs). Finally, the 
+have been a subject of intense investigations over a number of years 
+\cite{Ted1,Moore:2001bv,CG,GK}. Finally, the 
 supersymmetrized versions of the dimension five LV operators have been studied in detail in 
-(refs). Our paper includes all previously known cases of LV dimenion five interactions, but also 
+\cite{GrootNibbelink:2004za,Bolokhov:2005cj}. 
+Our paper includes all previously known cases of LV dimension five interactions, but also 
 extends  LV to operators that have never been discussed in the literature. 
 
 Our intention is to write down a generic LV theory with mass dimension
@@ -327,7 +330,7 @@ an  irreducible Lorentz tensor structure, which leads to a significant facilitat
 analysis of loop effects, and often protects dimension five operators from transmuting into 
 lower dimensions when the quantum effects are taken into account. 
 	Thus, we augment the requirements specified in 
-\cite{MP:} by demandig hat LV spurions be irreducible tensors under the Lorentz group transformations.
+\cite{MP:} by demanding that LV spurions be irreducible tensors under the Lorentz group transformations.
 %	As pointed out in [{\it Myers, Pospelov}], true LV operators must
 %	satisfy a number of requirements. 
 %	Those requirements were set for the interactions which modify
@@ -358,7 +361,7 @@ lower dimensions when the quantum effects are taken into account.
 	by the square of the UV scale.
 	The second group is the UV-enhanced operators, which induce modifications of  
 the dispersion relations that grow with particle's energy. These operators induce new 
-testable LV signatures in the laboratory experiments and in astrophysics, and are severly 
+testable LV signatures in the laboratory experiments and in astrophysics, and are severely 
 constrained by both.
 	The last group is formed by ``soft LV interactions'' which are protected from 
     developing quadratic divergencies at loop level and do not significantly modify the 
@@ -407,7 +410,7 @@ QED is is one of the most popular testing grounds for LV
 	complicated structure of interactions, we only elaborate on the example of 
 	operators which modify dispersion relations, which are of the most phenomenological interest.
 	In Section IV, we subdivide operators into the major groups according to their phenomenological 
-consequences and give a brief acount of typical limits one can expect from the currently available 
+consequences and give a brief account of typical limits one can expect from the currently available 
 tests of Lorentz violation. 
 	
 	
@@ -802,7 +805,7 @@ has to evaluate the operators down to the IR scale, where the
 majority of tests is performed. For this purpose, we study
 	the renormalization group (RG) equations for operators
 	\eqref{QED_gauge} and \eqref{QED_matter}.
-	The RG runninng brings about the change in 
+	The RG running brings about the change in 
     the magnitude of Wilson coefficients 
     and mixing of different operators.
 %	In our case we will ensure that the irreducible operators
@@ -820,7 +823,7 @@ majority of tests is performed. For this purpose, we study
 	of the Lorentz tensors, reduce this mixing to
 	a minimum.
 	The charge conjugation symmetry, which is an exact symmetry in QED,
-	prevents the mxing of  $C$-odd and $C$-even operators.
+	prevents the mixing of  $C$-odd and $C$-even operators.
 	The irreducibility of the background tensors dictates that any tensor of
 	higher rank will not mix with a tensor of a lower rank.
 	Thus, only operators of the same rank can admix to each other.
@@ -1045,7 +1048,7 @@ of explicit computation gives the following set of RG equations:
 	However, there is one simplification arising from intrinsic chirality of
 	SM spinors, which together with gauge invariance 
    would essentially prohibit all $E^{\kappa\mu\nu\rho}$ operators at dimension five level.
-In the rest of this section, we present our resuts for LV operators in different 
+In the rest of this section, we present our results for LV operators in different 
 sectors of the SM. 
 
 %	As in the previous section, LV interactions must obey 
@@ -1593,7 +1596,7 @@ be further subdivided into two groups.
 	even more complicated way. Clearly, there are many operators that give rise 
 	to dimension 3 LV interaction with quadratically divergent coefficients. 
 	Although, as indicated earlier, studying renormalization of interactions
-	is beneficial for refining costraints on LV,
+	is beneficial for refining constraints on LV,
 	we are not setting the goal to derive all one-loop RG
 	equations similarly to what we have done in QED.
 %	Most of the interactions contain the Higgs field and induce effects
@@ -1646,7 +1649,7 @@ the results in Appendix \ref{RG_SM}.
 	One should keep in mind, however, that loop effects
 	admix LV operators with heavy particles to the light quark and lepton 
     LV operators of the same dimension. Such (typically one-loop) corrections 
-    include the logarthmic mixing under the RG running,
+    include the logarithmic mixing under the RG running,
     as well as the finite threshold corrections. 
 	Therefore, the bounds discussed below contain an intrinsic sensitivity to LV 
 	interactions involving Higgs and weak bosons. 
@@ -1968,7 +1971,7 @@ on dimension 3 LV terms
 
 	Passing to the gauge sector, we refer to Eq.~\eqref{SM_gauge}.
 %	As agreed, we ignore the weak boson part, $ C_{\sul}^{\mu\nu\rho} $.
-	At low energies the LV lagrangian in the gauge sector
+	At low energies the LV Lagrangian in the gauge sector
 	takes the form
 \begin{equation}
 \label{SM_gauge_1GeV}
@@ -2145,7 +2148,7 @@ $ C^{\mu\nu\rho}_\el $
 \]
 	The limits on the interactions $ D_q^{\mu\nu\rho} $, $ D_{q,5}^{\mu\nu\rho} $ and
 	$ c_q^\mu $ are less strong by a factor of $ \alpha $ due to the suppression of the
-	nuclear electric field relative to the chromomagnetic fieldstrength.
+	nuclear electric field relative to the chromomagnetic field strength.
 	In constraining the leptonic operators $ D_l^{\mu\nu\rho} $ and $ r_e^{\mu\nu\rho} $ one
 	loses the advantage of using the strong internal nuclear fields, 
 	and the corresponding bounds are weakened by the ratio of the characteristic atomic 
@@ -2305,11 +2308,10 @@ $ C^{\mu\nu\rho}_\el $
 	to consider:
 	in some sense QED is what we can see of the Standard Model at very 
 	low energies. 
-%	We have presented an example of a generic Lorentz-violating 
-%	extension of a theory. 
-	It has been shown that QED admits a plenty of LV interactions,
+	At the level of mass dimension five,
+	QED admits a plenty of LV interactions,
 	parametrized by background vectors and tensors.
-	Exploration of some of the operators was done earlier
+	Some of these operators have been studied before
 \cite{MP:,Gagnon:2004xh}.
 	The gauge sector of QED appears to only possess a single LV
 	operator $ C^{\mu\nu\rho} $, which is known to generate cubic
@@ -2318,37 +2320,54 @@ $ C^{\mu\nu\rho}_\el $
 	be searched for in experiments.
 	Obtaining the law of RG evolution of these operators is a useful step in a 
 	phenomenological investigation.
-% of such theories.
 	We show that the method of irreducible tensors, which itself is a systematic
 	tool for building a theory, appears useful for these purposes too.
+	In general, we use QED as a toy model, with which one can practice in
+	building Lorentz-violating extensions. 
 
-%	QED left as a toy model,
-%	However, 
 	The accent of this paper was mainly put on the Standard Model 
 	domain.
+	One way of writing down a LV extension of the Standard Model is to 
+	list all possible interactions satisfying our criteria given in the Introduction.
 	Certainly, the wider gauge group and the diversity of field content lead
-	to a sufficiently broader set of LV structures, although the gauge
-	sector still keeps its simplicity.
-%	The field content essentially reduces below the EW scale,
-%	and so does the spectrum of LV operators.
-	Phenomenologically important is the effective theory below the EW scale, where
-	the spectrum of LV operators significantly reduces. 
-	In the effective theory, interactions which induce quadratic divergencies 
-	are severely constrainted, besides of just introducing a naturalness problem. 
-	Imposing a requirement of absence of uncontrollable divergencies,
-	one obtains a consistent effective theory with a narrower set of LV terms, which 
-	can be bounded by observations.
-	We divide the interactions of the effective low-energy theory into two groups,
-	the first one composed of the operators which grow with the energy (UV-enhanced
-	operators), and the second group including other, soft interactions. 
-	We show typical limits that can be placed on the magnitude of these
-	interactions.	
-	The bounds on UV-enhanced operators are the strongest as they come from astrophysical observations.
-	Soft interactions can only be bounded by laboratory experiments (measurements of spin precession,
-	electric dipole moments), which still impose very strong limits on such operators.
-	Finally, the dimension five LV Standard Model admits a lepton-number violating
-	operator, the bounds on which can be obtained from neutrino physics.
-%	Other operators can be bounded by involving RG mixing arguments.
+	to a sufficiently broader set of LV structures than in QED, although the gauge
+	sector is still very simple.
+	However, one quickly runs into the problem of dimensional transmutation into 
+	dimension three operators via quadratic divergencies.
+	Even if one places the cut-off of the theory at the level of $ 1~\GeV $,
+	the dangerous dimension five interactions would have to be tuned to be 
+	(much) smaller than $ 10^{-31}~\GeV^{-1} $. 
+	One therefore is naturally lead to a requirement of absence of uncontrollable divergencies
+	in a consistent effective theory, by sweeping out the problematic operators
+	by hand. 
+	Another essential point is that 
+	phenomenologically important is the effective theory below the EW scale.
+	All interactions written down for the full Standard Model contribute 
+	to the low energy theory operators written with only $ \suc $ and 
+	$ {\rm U}_\el(1) $ gauge groups. 
+	Constraining the low energy theory, one therefore automatically puts limits on
+	the interactions existing above the EW scale. 
+	
+	The operators of the effective low-energy theory can be divided in two
+	qualitatively different groups. 
+	The first group of interactions directly affects the propagation of particles 
+	by introducing a (species-dependent) ``speed-of-light''. 
+	We call such operators UV-enhanced, since they introduce corrections to the
+	dispersion relations which grow with the energy. 
+	The bounds on UV-enhanced operators are well-known to be of the order 
+	$ 10^{-33-34}~\GeV^{-1} $ and come from astrophysical observations.
+
+	All the other operators present in our effective theory do not affect
+	propagation of particles directly, and we call them soft LV interactions.
+	In general strong astrophysical constraints are not applicable to such
+	operators. 
+	Limits of the order $ 10^{-28-30}~\GeV^{-1} $ on them come from various types of 
+	laboratory experiments, and are still sufficiently tight. 
+	Finally, we separate out a unique lepton-number violating operator which only
+	exists in the neutrino sector.
+	Neutrino physics places a limit of $ 10^{-23-24}~\GeV^{-1} $ on this operator. 	
+
+
 	Although some operators seem to escape direct constraints, the RG
 	flow is expected to spread the limits over all the interactions.
 	We can hardly see it possible for some interactions to outstand in magnitude 
@@ -2360,16 +2379,10 @@ $ C^{\mu\nu\rho}_\el $
 	Model is excluded by observations.
 
 	Due to the rich field content of the Standard Model,
-%	Although the Standard Model is now out of fashion, we observe that 
 	the choice of applicable LV interactions is very wide. 
 	At the same time, due to experimental accessibility of the
 	Standard Model, analysis of the LV operators is directly connected to 
 	observational constraints.
-%	Reversely, in more abstract theories, we can expect
-%	that any extension of the Standard Model, should it possess
-%	LV properties, in the low energy regime will always be described
-%	by some of the operators we have built.
-%	Reversely, in more abstract theories with Lorentz violation, 
 	In more abstract (and thus less accessible) theories with Lorentz violation 
 	({\it e.g.} in those arising from non-commutative models or from quantum gravity),
 	if they appeal for phenomenological
@@ -2402,7 +2415,7 @@ $ C^{\mu\nu\rho}_\el $
 
 	We list one-loop RG equations for LV operators which modify propagation of
 	particles, {\it i.e.} those which couple to absolutely symmetric tensors.
-	Althought the set of such interactions in the Standard Model is not
+	Although the set of such interactions in the Standard Model is not
 	diverse, the equations appear to be complicated.
 	The notations for the operators are introduced in section 
 	\ref{matter_SM}.
