--- a/class.tex
+++ b/class.tex
@@ -108,7 +108,7 @@ Ontario N2J 2W9, Canada}
     composed from the Standard Model fields, using the effective field theory approach. 
     We identify different classes of Lorentz violating operators, 
     some of which are protected against transmutation 
-    to lower dimensions due to the quantum loop effects. Within each class of operators we determine  
+    to lower dimensions even at the loop level. Within each class of operators we determine  
     a typical experimental sensitivity to the size of Lorentz violation. 
 \end{abstract}
 	
@@ -254,7 +254,7 @@ Ontario N2J 2W9, Canada}
 	Standard Model (SM) of particles and fields, as well as its extensions at the 
 electroweak scale. Even though there is a robust evidence that Lorentz symmetry is maintained to a 
 high degree of accuracy, the searches of the so-called "Lorentz Violation" (LV) 
-are still well-motivated. The reason is that an a priori unknown physics at high 
+are still reasonably well-motivated. The intriguing possibility is that an a priori unknown physics at high 
 energy scales could lead to a spontaneous breaking of Lorentz invariance by 
 giving an expectation value to certain non-SM fields 
 that carry Lorentz indices, such as vectors, 
@@ -271,12 +271,16 @@ $O^{\rm SM}_{\mu\nu...} $ is the SM operator that transforms under
 the Lorentz group. It would be fair to say that the dynamical breaking of Lorentz 
 invariance is difficult to achieve in a consistent UV-complete theory, and most of the 
 papers studying LV shy away from this issue. 
- Nevertheless, the spurion or the effective field theory approach has been instrumental in 
+ Nevertheless, leaving aside the question of the dynamical LV, 
+the spurion or the effective field theory approach to the problem 
+\cite{Kost1,Colladay:1998fq} has been instrumental in 
 comparing the sensitivity of various LV tests. 
 	
 If the generation of interaction \eqref{start} is a true UV phenomenon, it proves extremely useful 
 to classify all operators of lowest dimensions coupled to a given spurion field $	C^{\mu\nu...}$.
-At dimension three and four levels, this was done nearly a decade ago by Kostelecky and co-workers. 
+At dimension three and four levels, this was done nearly a decade ago by Colladay and 
+Kostelecky 
+\cite{Kost1,Colladay:1998fq,CG}. 
 Dimension three Lorentz violating interactions, {\em e.g.} $b^\mu \psi i\gamma_\mu\gamma_5\psi$ and 
  $a^\mu \psi i\gamma_\mu\psi$, must defy the naive dimensional counting, according to which $
  a^\mu$ and $b^\mu$ scale linearly with the UV energy scale responsible for LV, 
@@ -294,10 +298,10 @@ in QED and in the SM. Previously, only certain subclasses of higher-dimensional 
 have been considered. Notably, dimension six LV operators and 
 their phenomenological consequences 
 have been studied at length in the context of the canonical non-commutative field theories 
-\cite{MPR1,UCSC,Carlson:1998vx}. 
+\cite{MPR1,Carroll:2001ws,Carlson:2001sw,UCSC}. 
 The operators that introduce the UV modifications of the dispersion relations for particles 
 have been a subject of intense investigations over a number of years 
-\cite{Ted1,Moore:2001bv,CG,GK}. Finally, the 
+\cite{Ted1,Vuc,MP:,Moore:2001bv,CG,GK,Bertolami:1996cq,Bolokhov:2006wu}. Finally, the 
 supersymmetrized versions of the dimension five LV operators have been studied in detail in 
 \cite{GrootNibbelink:2004za,Bolokhov:2005cj}. 
 Our paper includes all previously known cases of LV dimension five interactions, but also 
@@ -627,7 +631,7 @@ one needs to separate it from all
     contracted with irreducible rank five tensor. 
 We conclude that the only possible
 	LV operator in QED is $ C^{\mu\nu\rho} $.  
-	All these arguments trivially extend to a non-abelian gauge
+	All these arguments straightforwardly extend to a non-abelian gauge
 	field.
 
 \subsection{Matter Sector of QED}
@@ -730,7 +734,7 @@ We conclude that the only possible
 	~.
 \end{eqnarray}
 
-	In this formula,  $+$ and $-$ superscripts reflect
+	In this formula,  $+$ and $-$ superscripts refer to
 	the parity of the corresponding LV term under the charge conjugation.
 %	We have appended to each operator an upper $+$ or $-$ index reflecting
 %	its parity under charge conjugation.
@@ -742,7 +746,7 @@ indicate that these two terms vanish upon the use of EOM, but we list them
 	for the reason they become nontrivial in the non-abelian case.
 
 	We would like to make a side note on the symmetrizations in the 
-	interactions in \eqref{QED_matter} and in all following formulae.
+	interactions in \eqref{QED_matter} and in subsequent formulae.
 	We take the field operators to have certain symmetries 
 	(dictated by the corresponding Young tableaux), while their Wilson
 	coefficients to be just traceless tensors. 
@@ -1585,8 +1589,8 @@ be further subdivided into two groups.
 \end{align}
 	The last term in the Higgs-lepton sector, which couples to 
 	matrix $ \varsigma^{\mu\nu} $ antisymmetric in the flavor space, is unusual.
-	It is special in that it does not have analogs neither in other sectors, 
-	nor in lower dimensions --- it violates the lepton number by $ \Delta L = 2 $.
+	It is special in a sense that it does not have analogues ither in other sectors, 
+	or in lower dimensions as it violates the lepton number by two units.
 
 	This completes the list of the dimension V Lorentz-violating
 	operators in the Standard Model.
@@ -1622,10 +1626,10 @@ the results in Appendix \ref{RG_SM}.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Phenomenological Discussion}
+\section{Overview of LV phenomenology at dimension 5 level}
 \label{phenomenology}
 
-	We now discuss typical limits on LV dimension 5 operators, 
+	We now discuss typical limits on sensitivity to LV dimension 5 operators, 
 	which can be inferred from experimental tests 
 	of Lorentz symmetry in laboratory, astrophysical observations and
 	data on neutrino oscillations.
@@ -1743,7 +1747,8 @@ fields into
 	quadratic divergencies, which will be stabilized at the supersymmetry breaking scale. 
 
 \item	{\it $T$-invariance}. Since in the Standard Model one needs multiple loops to flip
-	$ T $-parity of interactions, we assume that the operators which do not have dimension
+	$ T $-parity of flavor-diagonal interactions, one can conclude 
+    that the operators which do not have dimension
 	three counterpartners with the same $ T $-parity, are protected.
 
 \item	{\it Lepton-number violation}. There are no dimension three LV operators compatible with
@@ -1753,7 +1758,7 @@ fields into
 \end{itemize}
 	
 	The operators for which the above criteria do not apply, have no reason to be protected,
-	and therefore will intermix with lower-dimensional interactions. 
+	and therefore will intermix with lower-dimensional interactions in a UV-sensitive way. 
 	We call such operators ``unprotected''. 
 %	We break the LV operators into three major groups: the ``unprotected operators'', 
 %	operators growing with energy and soft LV interactions, which we now discuss in order. 
@@ -1885,10 +1890,10 @@ on dimension 3 LV terms
 	scale they are unprotected and therefore subject to constraints \eqref{limit_dim3}. 
 	
 	
-	Leaving ourselves only with UV-safe operators, 
+	From this moment, we  concentrate only on UV-safe operators
 %	In all, denoting $ q = u, d $, 
-	at the scale of $ 1~\GeV $ we 
-	have the following effective interactions in the quark sector:
+	and
+	list the following effective interactions in the quark sector at the scale of $ 1~\GeV $:
 %%
 %% the quark matter LV sector of the Standard Model below the EW scale
 \begin{align}
@@ -2034,7 +2039,7 @@ $ C^{\mu\nu\rho}_\el $
 	The interactions in \eqref{SM_quark_1GeV}-\eqref{SM_gauge_1GeV} 
 	can be divided into two groups.
 	The first group is formed by the operators which modify dispersion relations
-	and grow with energy \cite{MP:}, which we term the {\it UV-enhanced operators}.
+	and grow with energy \cite{MP:}, which we call the {\it UV-enhanced operators}.
 	The second group, correspondingly, hosts all other
 	structures, which we designate as ``soft'' LV interactions  
 	(see Table \ref{constr_table}).
@@ -2110,10 +2115,11 @@ $ C^{\mu\nu\rho}_\el $
 	efficiently  lose all their energy before reaching the Earth. 
 	The fact of observation of high-energy cosmic rays sets typical constraints on UV-enhanced
 	LV of the order of $ 10^{-33-34}~\GeV^{-1} $. 
-	Not all ``corners'' of the parameter space of UV-enhanced operators are covered by these
+	It would be fair to say that not all ``corners'' of the parameter space of 
+UV-enhanced operators are covered by these
 	limits.
-	Sufficiently strong LV in the up quark sector would allow protons in the cosmic
-	rays to decay into $ \Delta^{++} $ which would be stable at high energies
+	For example, sufficiently strong LV in the up quark sector would allow protons in the cosmic
+	rays to decay into $ \Delta^{++} $ which could become stable at high energies
 	\cite{Gagnon:2004xh}.
 	
 	{\it Precision experiments}. 
@@ -2186,7 +2192,8 @@ $ C^{\mu\nu\rho}_\el $
 	of changing the patterns of neutrino oscillations.
 	Constraints from reactor and atmospheric neutrino oscillation data can be used 
 \cite{Choubey:2003ke}
-	to limit various flavor components of $ \varsigma_\nu^{\mu\nu} $:
+	to limit various flavor components of $ \varsigma_\nu^{\mu\nu} $. In the best case scenario, 
+	the sensitivity of the neutrino oscillation experiments could provide  the limits at the level of 
 \[
 	| \varsigma_\nu^{\mu\nu} | ~~\lesssim~~ 10^{-23-24}~\GeV^{-1}~.
 \]
@@ -2195,7 +2202,7 @@ $ C^{\mu\nu\rho}_\el $
 	generically restrict all the components of corresponding LV tensors.
 	However, a customary argument applies, that the ``unobservable'' parts of the tensors
 	could induce the detectable effects due to the Lorentz boost caused by motion of the Earth 
-	relative to the Galaxy, and so cannot exceed much more the observable components.
+	relative to the Galaxy, and so cannot exceed the observable components by more than $O(10^3)$.
 	
 %	The UV-enhanced operators are 
 %	known to be severely constrained by the
@@ -2303,91 +2310,62 @@ $ C^{\mu\nu\rho}_\el $
 \section{Conclusion}
 	We have presented a systematic Lorentz-violating extension of 
 	Quantum Electrodynamics and the Standard Model 
-	with all dimension five operators.
+	with all possible dimension five operators.
 	Quantum Electrodynamics is the simplest phenomenological example
-	to consider:
-	in some sense QED is what we can see of the Standard Model at very 
-	low energies. 
+	to consider. 
 	At the level of mass dimension five,
-	QED admits a plenty of LV interactions,
-	parametrized by background vectors and tensors.
-	Some of these operators have been studied before
-\cite{MP:,Gagnon:2004xh}.
-	The gauge sector of QED appears to only possess a single LV
-	operator $ C^{\mu\nu\rho} $, which is known to generate cubic
-	modifications of dispersion relations.	
-	Other interactions are examples of non-minimal couplings which can
-	be searched for in experiments.
-	Obtaining the law of RG evolution of these operators is a useful step in a 
-	phenomenological investigation.
-	We show that the method of irreducible tensors, which itself is a systematic
-	tool for building a theory, appears useful for these purposes too.
-	In general, we use QED as a toy model, with which one can practice in
-	building Lorentz-violating extensions. 
+	QED admits a plethora of LV interactions,
+	parametrized by background vectors and tensors, most of which are consentrated in the matter 
+sector.
+We found the one-loop logarithmic renormalization group equations for the QED LV operators, and identified
+ one operator that has quadratic sensitivity to the UV-cutoff.
 
-	The accent of this paper was mainly put on the Standard Model 
-	domain.
-	One way of writing down a LV extension of the Standard Model is to 
-	list all possible interactions satisfying our criteria given in the Introduction.
+
+	Extending QED to full Standard Model, we list all possible LV
+    interactions satisfying the criteria of the effective field theory 
+     given in the Introduction.
 	Certainly, the wider gauge group and the diversity of field content lead
 	to a sufficiently broader set of LV structures than in QED, although the gauge
-	sector is still very simple.
+	sector remains very simple.
 	However, one quickly runs into the problem of dimensional transmutation into 
-	dimension three operators via quadratic divergencies.
-	Even if one places the cut-off of the theory at the level of $ 1~\GeV $,
-	the dangerous dimension five interactions would have to be tuned to be 
-	(much) smaller than $ 10^{-31}~\GeV^{-1} $. 
-	One therefore is naturally lead to a requirement of absence of uncontrollable divergencies
-	in a consistent effective theory, by sweeping out the problematic operators
-	by hand. 
-	Another essential point is that 
-	phenomenologically important is the effective theory below the EW scale.
-	All interactions written down for the full Standard Model contribute 
-	to the low energy theory operators written with only $ \suc $ and 
-	$ {\rm U}_\el(1) $ gauge groups. 
-	Constraining the low energy theory, one therefore automatically puts limits on
-	the interactions existing above the EW scale. 
-	
-	The operators of the effective low-energy theory can be divided in two
+	dimension three operators via quadratic divergencies, which can easily invalidate the 
+    distinction between oeprators of different dimensions.
+	One therefore is naturally lead to an additional requirement of 
+the absence of uncontrollable divergencies
+	in a consistent effective theory. 
+	We identify broad classes of LV operators that are protected against dimensional trnasmutations 
+	by a variety of different mechanisms. These mechanisms include the protection by the irreducibility of 
+	the LV spurion tensor structures, supersymmetry, $T$-invariance, and the lepton number conservation. 
+
+	The protected operators of the effective low-energy theory can be divided into several
 	qualitatively different groups. 
 	The first group of interactions directly affects the propagation of particles 
 	by introducing a (species-dependent) ``speed-of-light''. 
 	We call such operators UV-enhanced, since they introduce corrections to the
 	dispersion relations which grow with the energy. 
 	The bounds on UV-enhanced operators are well-known to be of the order 
-	$ 10^{-33-34}~\GeV^{-1} $ and come from astrophysical observations.
+	$ 10^{-33-34}~\GeV^{-1} $ and come from astrophysical observations. 
+	Although these bounds are well studied, we calculate the renormalization 
+group equations that govern the logarithmic 
+	evolution of these operators over the energy scales, which can be helpful in 
+	strengthening the bounds on operators involving heavy fields. 
 
-	All the other operators present in our effective theory do not affect
-	propagation of particles directly, and we call them soft LV interactions.
+	All the other protected operators present in our effective theory do not grow with 
+energies of propagating particles, and we call them soft LV interactions.
 	In general strong astrophysical constraints are not applicable to such
 	operators. 
-	Limits of the order $ 10^{-28-30}~\GeV^{-1} $ on them come from various types of 
+	Limits of the order $ 10^{-28-30}~\GeV^{-1} $ on several classes of such operators
+    can be deduced from clock comparison types of 
 	laboratory experiments, and are still sufficiently tight. 
-	Finally, we separate out a unique lepton-number violating operator which only
-	exists in the neutrino sector.
-	Neutrino physics places a limit of $ 10^{-23-24}~\GeV^{-1} $ on this operator. 	
+	Among less constrained type of operators are those that violate lepton number by two units, 
+	and $T$-odd operators that are limited only by the electric dipole moment constraints. 
 
 
-	Although some operators seem to escape direct constraints, the RG
-	flow is expected to spread the limits over all the interactions.
-	We can hardly see it possible for some interactions to outstand in magnitude 
-	with respect to other and yet not to induce observable effects at low
-	energy. 
-	Given the strength of typical constraints 
-\cite{Gagnon:2004xh}, we pick up the natural 
-	conclusion that Lorentz violation at dimension five level in the Standard
-	Model is excluded by observations.
-
-	Due to the rich field content of the Standard Model,
-	the choice of applicable LV interactions is very wide. 
-	At the same time, due to experimental accessibility of the
-	Standard Model, analysis of the LV operators is directly connected to 
-	observational constraints.
-	In more abstract (and thus less accessible) theories with Lorentz violation 
-	({\it e.g.} in those arising from non-commutative models or from quantum gravity),
-	if they appeal for phenomenological
-	viability, we can expect that the LV behavior in the low energy regime will 
-	always be described by the operators we have built.
+The strength of the analysis performed in this paper is in its generality. 
+Indeed, if one day a theory of quantum gravity or any other UV-sensitive theory would 
+reach the stage of predicting the low-energy LV phenomenology, such predictions 
+can be readily compared with the set of operators derived in this work, and in addition
+can be tested for consistency with respect to their UV behavior at the loop level. 
 
 
 \newpage
